syntax = "proto3";
package sendmail;
option go_package = ".;sendmail";
import "google/protobuf/empty.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";

service Sendmail {
  rpc Healthz (google.protobuf.Empty) returns (HealthzResponse) {}
  rpc SendSample (EmailRequest) returns (EmailResponse) {}
}

message HealthzResponse {
  string return_message = 1;
}

message EmailRequest {
  string fromUserName = 1;
  string fromAddress = 2;
  string toAddress = 3;
  string subject = 4;
  string msg =5;
}

message EmailResponse {
  string status = 1;
}
